# newsletter-automation-multi-agent-crewai

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py  streamlit.py
src/automated_newsletter_multi_agent_crew/: crew.py  tools.py
src/automated_newsletter_multi_agent_crew/config/: agents.yaml  tasks.yaml
