[project]
name = "automated_newsletter_multi_agent_crew"
version = "0.1.0"
description = "automated-newsletter-multi-agent-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
automated_newsletter_multi_agent_crew = "automated_newsletter_multi_agent_crew.main:run"
run_crew = "automated_newsletter_multi_agent_crew.main:run"
train = "automated_newsletter_multi_agent_crew.main:train"
replay = "automated_newsletter_multi_agent_crew.main:replay"
test = "automated_newsletter_multi_agent_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
